--- a/calculadora.html
+++ b/calculadora.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <div class="fundo">
-        <h1>Pedro Mequelim</h1>
+        <h1>Calculadora Virtual</h1>
         <div class="calculadora">
-            <h1>Calculadora</h1>
             <p id="resultado"></p>
             <table>
                 <tr>
